# iris

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cspell.json
include/: log.h  protocol.h  socket.h
include/client/: client.h
include/common/: protocol.h  sha256.h  socket.h
include/server/: chat.h  server.h
src/client/: client.cpp  main.cpp
src/common/: protocol.cpp  sha256.cpp  socket.cpp
src/server/: chat.cpp  main.cpp  server.cpp
